# api/docs/api.yml
@@ -141,251 +141,111 @@ paths:
           description: Returns list of responses
           content: {}
   /api/timeseries:
-    post:
+    get:
       tags:
         - time series
       summary: 'Fetches time-series data from the osmesa database. Note: all of the parameters below are properties of
         an application/json request payload (body). Note: at least one Filter is required, otherwise a 400 Bad Request
         is returned.'
-      requestBody:
-        description: 'JSON request body'
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              required:
-                - startDate
-              properties:
-                startDate:
-                  type: string
-                  description: Start date of query. ISO-8601 formatted datetime string (UTC time zone).
-                  example: 2020-12-30
-                endDate:
-                  type: string
-                  description: End date of query. ISO-8601 formatted datetime string (UTC time zone).
-                  default: (now)
-                  example: 2020-12-30
-                binInterval:
-                  description: 'Response will be binned into equal intervals specified by this parameter. Must be shorter
-                    than end-date minus start-date. If omitted, no binning will be performed. ISO-8601 formatted time
-                    interval/duration string.'
-                  type: string
-                  example: P1Y2M10DT2H30M
-                userIdsFilter:
-                  description: Filter down to these mapedit/osm user id(s).
-                  type: array
-                  items:
-                    type: integer
-                    example: 10499924
-                categoriesFilter:
-                  description: 'Filter down to these osmesa categories of measurements and counts.
-                    Each count and measurement will have [add, modified, deleted] in the response. Measurements
-                    are in kilometers, or square kilometers, e.g. *_km and *_km2.
-                    Note: available categories sourced from
-                    https://github.com/azavea/osmesa/blob/master/src/analytics/src/main/scala/osmesa/analytics/stats/package.scala#L119-L180'
-                  type: array
-                  example: [road_km, coastline_km, pois, buildings]
-                  items:
-                    type: string
-                    enum:
-                      # measurements
-                      - road_km
-                      - waterway_km
-                      - coastline_km
-                      - railline_km
-                      - landuse_km2
-                      - natural_km2
-                      # counts
-                      - roads
-                      - waterways
-                      - coastlines
-                      - buildings
-                      - railway_features
-                      - raillines
-                      - pois
-                      - landuse
-                      - natural
-                      - other
-                countriesFilter:
-                  description: Filter down to these countries.
-                  type: array
-                  items:
-                    type: string
-                    description: ISO-3166 country code (3 letters), or USA-XX for a US State
-                  example: [ AFG, AUS, USA, USA-AK ]
-                hashtagsFilter:
-                  description: Filter down to these exact changeset hashtag(s).
-                  type: array
-                  items:
-                    type: string
-                  example: [ 345_task_789, 345_task_111 ]
-                hashtagPrefixFilter:
-                  type: array
-                  items:
-                    type: string
-                  example: [ ocelots_ ]
-                  description: Filter down to these hashtag(s), using a prefix match.
+      parameters:
+        - name: startDate
+          in: query
+          description: Start date of query. ISO-8601 formatted datetime string (UTC time zone).
+          required: true
+          schema:
+            type: string
+            example: 2020-12-30
+        - name: endDate
+          in: query
+          description: End date of query. ISO-8601 formatted datetime string (UTC time zone).
+          schema:
+            type: string
+            default: (now)
+            example: 2020-12-30
+        - name: binInterval
+          in: query
+          description: 'Response will be binned into equal intervals specified by this parameter. Must be shorter
+              than end-date minus start-date. If omitted, no binning will be performed. ISO-8601 formatted time
+              interval/duration string.'
+          schema:
+            type: string
+            example: P1Y2M10DT2H30M
+        - name: userIdsFilter
+          description: Filter down to these mapedit/osm user id(s).
+          in: query
+          explode: false
+          style: pipeDelimited
+          schema:
+            type: array
+            items:
+              type: integer
+              example: 10499924
+        - name: countriesFilter
+          description: Filter down to these countries.
+          in: query
+          explode: false
+          style: pipeDelimited
+          schema:
+            type: array
+            items:
+              type: string
+              description: ISO-3166 country code (3 letters), or USA-XX for a US State
+            example: [ AFG, AUS, USA, USA-AK ]
+        - name: hashtagsFilter
+          description: Filter down to these exact changeset hashtag(s).
+          in: query
+          explode: false
+          style: pipeDelimited
+          schema:
+            type: array
+            items:
+              type: string
+              example: [ 345_task_789, 345_task_111 ]
+        - name: hashtagPrefixFilter
+          description: Filter down to these hashtag(s), using a prefix match.
+          in: query
+          explode: false
+          style: pipeDelimited
+          schema:
+            type: array
+            items:
+              type: string
+              example: [ ocelots_ ]
+        - name: categoriesFilter
+          description: 'Filter down to these osmesa categories of measurements and counts.
+            Each count and measurement will have [add, modified, deleted] in the response. Measurements
+            are in kilometers, or square kilometers, e.g. *_km and *_km2.
+            Note: available categories sourced from
+            https://github.com/azavea/osmesa/blob/master/src/analytics/src/main/scala/osmesa/analytics/stats/package.scala#L119-L180'
+          in: query
+          explode: false
+          style: pipeDelimited
+          schema:
+            type: array
+            example: '[road_km, coastline_km, pois, buildings]'
+            items:
+              type: string
+              enum:
+                # measurements
+                - road_km
+                - waterway_km
+                - coastline_km
+                - railline_km
+                - landuse_km2
+                - natural_km2
+                # counts
+                - roads
+                - waterways
+                - coastlines
+                - buildings
+                - railway_features
+                - raillines
+                - pois
+                - landuse
+                - natural
+                - other
       responses:
         400:
           description: Bad Request, e.g. when no filters are passed in the requestBody.
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-        200:
-          description: Time series data structure.
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  bins:
-                    type: array
-                    description: Result bins created according to the binInterval
-                      (duration) parameter, if any. Defaults to a single bin if binInterval
-                      was not specified.
-                    items:
-                      type: object
-                      properties:
-                        startDate:
-                          type: string
-                          description: Result bin start date. ISO-8601 formatted datetime
-                            string (UTC time zone).
-                          example: 2020-12-29
-                        endDate:
-                          type: string
-                          description: Result bin end date. ISO-8601 formatted datetime
-                            string (UTC time zone).
-                          example: 2020-12-30
-                        userStatistics:
-                          type: array
-                          description: Modeled after the user_statistics materialized
-                            view from osmesa.
-                          items:
-                            type: object
-                            properties:
-                              userId:
-                                type: integer
-                                description: OSM/mapedit user id
-                              name:
-                                type: string
-                                description: OSM/mapedit user name
-                              measurements:
-                                type: object
-                                properties:
-                                  road_km_added:
-                                    type: number
-                                  road_km_deleted:
-                                    type: number
-                                  road_km_modified:
-                                    type: number
-                                  waterway_km_added:
-                                    type: number
-                                  waterway_km_deleted:
-                                    type: number
-                                  waterway_km_modified:
-                                    type: number
-                                  coastline_km_added:
-                                    type: number
-                                  coastline_km_deleted:
-                                    type: number
-                                  coastline_km_modified:
-                                    type: number
-                                  railline_km_added:
-                                    type: number
-                                  railline_km_deleted:
-                                    type: number
-                                  railline_km_modified:
-                                    type: number
-                                  landuse_km2_added:
-                                    type: number
-                                  landuse_km2_deleted:
-                                    type: number
-                                  landuse_km2_modified:
-                                    type: number
-                                  natural_km2_added:
-                                    type: number
-                                  natural_km2_deleted:
-                                    type: number
-                                  natural_km2_modified:
-                                    type: number
-                                description: Properties with values for each of the
-                                  osmesa measurements categories available, e.g. road_km_added
-                              counts:
-                                type: object
-                                properties:
-                                  roads_added:
-                                    type: integer
-                                  roads_deleted:
-                                    type: integer
-                                  roads_modified:
-                                    type: integer
-                                  waterways_added:
-                                    type: integer
-                                  waterways_deleted:
-                                    type: integer
-                                  waterways_modified:
-                                    type: integer
-                                  coastlines_added:
-                                    type: integer
-                                  coastlines_deleted:
-                                    type: integer
-                                  coastlines_modified:
-                                    type: integer
-                                  buildings_added:
-                                    type: integer
-                                  buildings_deleted:
-                                    type: integer
-                                  buildings_modified:
-                                    type: integer
-                                  railway_features_modified:
-                                    type: integer
-                                  railway_features_added:
-                                    type: integer
-                                  railway_features_deleted:
-                                    type: integer
-                                  raillines_added:
-                                    type: integer
-                                  raillines_deleted:
-                                    type: integer
-                                  raillines_modified:
-                                    type: integer
-                                  pois_modified:
-                                    type: integer
-                                  pois_added:
-                                    type: integer
-                                  pois_deleted:
-                                    type: integer
-                                  landuse_added:
-                                    type: integer
-                                  landuse_deleted:
-                                    type: integer
-                                  landuse_modified:
-                                    type: integer
-                                  natural_added:
-                                    type: integer
-                                  natural_deleted:
-                                    type: integer
-                                  natural_modified:
-                                    type: integer
-                                  other_added:
-                                    type: integer
-                                  other_deleted:
-                                    type: integer
-                                  other_modified:
-                                    type: integer
-                                description: Properties with values for each of the
-                                  osmesa counts categories available, e.g. pois_added
-                              changesetCount:
-                                type: integer
-                                description: Number of changesets
-                              editCount:
-                                type: integer
-                                description: Number of edits
-                      description: Result bin of binInterval duration
-      x-codegen-request-body-name: hashtagPrefixFilter
+    x-codegen-request-body-name: hashtagPrefixFilter
 components: {}
